# Nesora-mkm

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  main.cpp
locale/: README.md  languageslist.nstml
locale/languages/: en.nstml  jp.nstml
plugin/: libNesoraPlugin_DefaultTextEditorlib.dylib
plugin/editor/: pluginlist.nstml
src/: Nesora.h  main  main.cpp
src/Nesora/: Nesora.cpp  Nesora.h  NesoraInterpreter.cpp  NesoraInterpreter.h  NesoraStringFormat.cpp  NesoraStringFormat.h  NesoraWave.hpp  Nesoraint.h  Nesoraio.cpp  Nesoraio.h
src/NesoraEditor/Common/: NesoraDirectry.h  NesoraLocale.h  NesoraPluginHeader.h  NesoraReadNSML.cpp  NesoraReadNSML.h  NesoraWindowIDs.h
src/NesoraEditor/Common/Nesora_wx/: NesoraTabart.cpp  NesoraTabart.h
src/NesoraEditor/Common/Plugin/: NesoraPlugin.h  NesoraPluginHeader.h
src/NesoraEditor/NesoraManager/: NesoraManager.cpp  NesoraManager.h  NesoraManagerMenuBar.cpp  NesoraManagerTreeCtrlData.h
src/main.dSYM/Contents/Resources/DWARF/: main
src/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
